# SmartBench

./: README.md  pyproject.toml  requirements.txt  run.sh  start.py
config/: default.yaml  dev.yaml  prod.yaml
data/cache/: file_cache.json
data/regression/: history.json
docs/: USAGE_GUIDE.md
smartbench/: __init__.py  cli.py
smartbench/agents/: __init__.py  analysis.py  base.py  benchmark.py  observer.py  orchestrator.py  verification.py
smartbench/core/: config.py  types.py
smartbench/engine/: __init__.py  aggregator.py  cache.py  compiler.py  debate.py  diagnostic.py  flamegraph.py  gdb_diagnosis.py  generator.py  history.py  raft_report.py  regression.py  system_diagnosis.py  weight.py
smartbench/plugins/: __init__.py
smartbench/plugins/models/: __init__.py  anthropic.py  base.py  openai_compat.py
smartbench/plugins/systems/: __init__.py  base.py  mysql.py  raft_kv.py  redis.py
tests/: __init__.py  conftest.py  test_aggregator.py  test_config.py  test_generator.py  test_models.py  test_types.py  test_weight.py
